test/Fail/Issue7227.err
Issue7227.agda:9.1-12.42: error: [GenericDocError]
Local variable 'foo' escaping in result of extendContext: foo
